--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Tony Doan!</h1>
-				<p>I'm best known as the Tonster from <em>my parents</em> haha <a href="/about">Read more about my life...</a></p>
+				<p>I am Tony and my parents call me <em>knee</em> haha <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:toedoan@gmail.com">email</a></li>
+        		<li><a href="https://github.com/towoknee">github.com/towoknee</a></li>
 		</ul>
 		</footer>
 	</body>
