--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/resume">Resume</a></li>
+	        	<li><a href="/experience">Experience</a></li>
         		<li><a href="/projects">Projects</a></li>
+        		<li><a href="/misc">Misc.</a></li>
     		</ul>
 		</nav>
 		<div class="container">
