--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -17,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi again! These are some of the stuff I worked on</h1>
-				<p>I made websites and games</p>
+        		<h1>Hi there, I'm Tony Doan AGAIN!</h1>
+				<p>I am Tony and my parents call me <em>knee</em> haha</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
