--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Tony Doan AGAIN!</h1>
-				<p>I am Tony and my parents call me <em>knee</em> haha</p>
+				<p>Here are some projects I've worked on!</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
