--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a href="/index">Home</a></li>
 	        	<li><a href="/experience">Experience</a></li>
-        		<li><a href="/projects">Projects</a></li>
+        		<li><a href="projects.html">Projects</a></li>
         		<li><a href="/misc">Misc.</a></li>
     		</ul>
 		</nav>
