--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@
 		<nav>
     		<ul>
         		<li><a href="/index">Home</a></li>
-	        	<li><a href="/">Experience</a></li>
+	        	<li><a href="experience.html">Experience</a></li>
         		<li><a href="/projects">Projects</a></li>
         		<li><a href="/misc">Misc.</a></li>
     		</ul>
