--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hihi! Here are some of my experiences</h1>
-				<p> <em>I worked</em> haha</p>
+				
+			<img src="/images/zinspectorImage.png" alt="zInspector Icon" width="128" height="128">
+			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
