--- a/experience.html
+++ b/experience.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Hihi! Here are some of my experiences</h1>
 				
-			<img src="/images/zinspectorImage.png" alt="zInspector Icon" width="128" height="128">
+			<img src="/images/zinspectorImage.png" alt="zInspector Icon">
 			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
