--- a/experience.html
+++ b/experience.html
@@ -4,6 +4,14 @@
 		<title>Tony Doan, Exp</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		
+		<style>
+			div.relative {
+			  position: relative;
+			  left: 20px;
+			  border: 3px solid #73AD21;
+			}
+		</style>
 	</head>
 	<body>
 		<nav>
@@ -17,9 +25,10 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hihi! Here are some of my experiences</h1>
-				
-			<img src="/images/zinspectorImage.png" align="left" alt="zInspector Icon">
 			
+			<div class="im1">
+			<img src="/images/zinspectorImage.png" align="left" alt="zInspector Icon">
+			</div> 
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
