--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		
 		<style>
-			div.relative {
+			div.im1 {
 			  position: relative;
 			  left: 20px;
 			  border: 3px solid #73AD21;
