--- a/experience.html
+++ b/experience.html
@@ -26,7 +26,7 @@
         		<h1>Hihi! Here are some of my experiences</h1>
 			
 			<div class="im1">
-			<img src="/images/zinspectorImage.png" align="left" alt="zInspector Icon">
+			<img src="/images/zinspectorImage.png" alt="zInspector Icon">
 			</div> 
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
