--- a/experience.html
+++ b/experience.html
@@ -6,9 +6,19 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		
 		<style>
-			div.im1 {
-			  position: relative;
-			  left: -100px;
+			#wrap{
+				width=485px;
+			}
+			
+			.left{
+				width=240px;
+				background-color:#00d;
+				height=123px;
+			}
+			.right{
+				width=240px;
+				background-color:#01d;
+				height=123px;
 			}
 		</style>
 	</head>
@@ -21,15 +31,12 @@
         		<li><a href="/misc">Misc.</a></li>
     		</ul>
 		</nav>
-		<div class="container">
-    		<div class="blurb">
+		<div id="wrap">
+
         		<h1>Hihi! Here are some of my experiences</h1>
-			
-			<div class="im1">
-			<img src="/images/zinspectorImage.png" alt="zInspector Icon">
-			</div> 
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+			<div class="left"></div>
+			<div class="right></div>
+		</div><!-- /.wrap -->
 		<footer>
     		<ul>
         		<li><a href="mailto:toedoan@gmail.com">email</a></li>
