--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
 
         		<h1>Hihi! Here are some of my experiences</h1>
 			<div class="left"></div>
-			<div class="right></div>
+			<div class="right"></div>
 		</div><!-- /.wrap -->
 		<footer>
     		<ul>
