--- a/experience.html
+++ b/experience.html
@@ -7,18 +7,18 @@
 		
 		<style type="text/css">
 			#wrap{
-				width=485px;
+				width:485px;
 			}
 			
 			.left{
-				width=240px;
+				width:240px;
 				background-color:#00d;
-				height=123px;
+				height:123px;
 			}
 			.right{
-				width=240px;
+				width:240px;
 				background-color:#01d;
-				height=123px;
+				height:123px;
 			}
 		</style>
 	</head>
