--- a/experience.html
+++ b/experience.html
@@ -5,22 +5,6 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		
-		<style type="text/css">
-			#wrap{
-				width:485px;
-			}
-			
-			.left{
-				width:240px;
-				background-color:#00d;
-				height:123px;
-			}
-			.right{
-				width:240px;
-				background-color:#01d;
-				height:123px;
-			}
-		</style>
 	</head>
 	<body>
 		<nav>
@@ -32,10 +16,10 @@
     		</ul>
 		</nav>
 		<div id="wrap">
-
         		<h1>Hihi! Here are some of my experiences</h1>
-			<div class="left"></div>
-			<div class="right"></div>
+			<p><img src="/images/zinspectorImage.png" alt="zLogo" id="zPic" style="width:170px;height:170px;margin-right:15px;">
+			fa asfja kfljalje ifkldf ;aiw aksdj;fkl 9pe jasf as
+			</p>
 		</div><!-- /.wrap -->
 		<footer>
     		<ul>
