--- a/experience.html
+++ b/experience.html
@@ -17,9 +17,11 @@
 		</nav>
 		<div id="wrap">
         		<h1>Hihi! Here are some of my experiences</h1>
-			<p><img src="/images/zinspectorImage.png" alt="zLogo" id="zPic" style="width:200px;height:170px;margin-right:15px;">
+			<!-- <p><img src="/images/zinspectorImage.png" alt="zLogo" id="zPic" style="width:200px;height:170px;margin-right:15px;">
 			fa asfja kfljalje ifkldf ;aiw aksdj;fkl 9pe jasf as
-			</p>
+			</p> -->
+			<img src="/images/experiences.png" alt="experiencePage">
+			
 		</div><!-- /.wrap -->
 		<footer>
     		<ul>
