--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
 			<!-- <p><img src="/images/zinspectorImage.png" alt="zLogo" id="zPic" style="width:200px;height:170px;margin-right:15px;">
 			fa asfja kfljalje ifkldf ;aiw aksdj;fkl 9pe jasf as
 			</p> -->
-			<img src="/images/experiences.png" alt="experiencePage">
+			<img src="/images/experiences.png" width="50%" height="50%" alt="experiencePage">
 			
 		</div><!-- /.wrap -->
 		<footer>
