--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Tony Doan!</h1>
-				<p>I am Tony and my parents call me <em>knee</em> haha <a href="/about">Read more about my life...</a></p>
+				<p>I am Tony and my parents call me <em>knee</em> haha <a href="/experience">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
