--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Tony Doan!</h1>
-				<p>I am Tony and my parents call me <em>knee</em> haha <a href="/experience">Read more about my life...</a></p>
+				<p> This website is meant to be an extension of my resume, I guess you can call it my resume++.</p>
+				<p> Thanks for taking the time to visit my webpage!</p>
+				<p><a href="/experience">Read more about me!</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
