--- a/projects.html
+++ b/projects.html
@@ -16,8 +16,9 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Tony Doan AGAIN!</h1>
-				<p>Here are some projects I've worked on!</p>
+        		<h1>Here are some projects I've worked on!</h1>
+			<p>RIP</p>
+			<p>KnoDaWae</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
