--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Here are some projects I've worked on!</h1>
 			<p>RIP</p>
-			<p><img src="/images/ripSS.png" alt="game"></p>
+			<p><img src="/images/ripSS.png" width="99%" alt="game"></p>
 			<p>KnoDaWae</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
