--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,15 @@
         		<h1>Here are some projects I've worked on!</h1>
 			<p><img src="/images/ripSS.png" width="85%" alt="game"></p>
 			<h2>RIP</h2>
-			<p>RIP, or Rage-Inducing Platformer, is a 2d platformer game created in Unity.</p>
+			<p>
+			RIP, or Rage-Inducing Platformer, is a 2D platformer game created in Unity. 
+			The main objective of this game is to get from start to finish, under a time limit, with multiple obstacles standing in the way.
+			I worked on this project with 4 others, with each of us taking on certain roles such as UI, physics, animation, and input. 
+			I took on the UI position, fleshing out various visual components allowing players to have a better experience with the game.
+			The scripts I wrote were written in C#, and I was responsible for features such as the timer, score, scene transitions, objects, and setting.
+			We all dabbled in each others' roles as well, and I did a bit of animation as well as game input for our project. 
+			
+			</p>
 			<p>KnoDaWae</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
