--- a/projects.html
+++ b/projects.html
@@ -26,8 +26,8 @@
 			I took on the UI position, fleshing out various visual components allowing players to have a better experience with the game.
 			The scripts I wrote were written in C#, and I was responsible for features such as the timer, score, scene transitions, objects, and setting.
 			We all dabbled in each others' roles as well, and I did a bit of animation as well as game input for our project. 
-			Here's a <a href="https://www.youtube.com/watch?v=lx1-ISlhUis">link</a> to the trailer I produced and the 
-			github <a href="https://github.com/towoknee/RIP-1">repository</a> for this game.
+			Here's a <a href="https://www.youtube.com/watch?v=lx1-ISlhUis" target="_blank">link</a> to the trailer I produced and the 
+			github <a href="https://github.com/towoknee/RIP-1" target="_blank">repository</a> for this game.
 			</p>
 			<p>KnoDaWae</p>
     		</div><!-- /.blurb -->
