--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,7 @@
 			Here's a <a href="https://www.youtube.com/watch?v=lx1-ISlhUis" target="_blank">link</a> to the trailer I produced and the 
 			github <a href="https://github.com/towoknee/RIP-1" target="_blank">repository</a> for this game.
 			</p>
+			<p><img src="/images/kno.png" width="85%" alt="game2"></p>
 			<h2>KnoDaWae</h2>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
