--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,16 @@
 			
 			<h2>KnoDaWae</h2>
 			<p><img src="/images/kno.png" width="85%" alt="game2"></p>
+			<p>
+			KnoDaWae is an educational website that teaches novice programmers how to code in Python. 
+			This project was created at HackDavis, a hackathon held at my university, along with 3 others. 
+			Our goal was to explain a topic that is usually seen as dull and boring in a fun and entertaining way. 
+			From this, we ended up making use of a popular meme during that time and made the learning process into an interactive story.
+			We made use of HTML, CSS, and Javascript to build the site. By the end of the hackathon, we demoed our project and even ended
+			up winning a prize... for best domain name. 
+			Here's a  <a href="https://htmlpreview.github.io/?https://github.com/towoknee/knodawae/blob/master/pages/index.html" target="_blank">demo</a>
+			of the website, along with the <a href="https://github.com/towoknee/knodawae" target="_blank">repository</a>. 
+			</p>
 
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
