--- a/experience.html
+++ b/experience.html
@@ -22,6 +22,8 @@
 			</p> -->
 			<img src="/images/listOfStuff.png" width="99%" alt="experiencePage">
 			
+			<p><a href="/projects">Onward to my projects</a></p>
+			
 		</div><!-- /.wrap -->
 		<footer>
     		<ul>
