--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
 			</p> -->
 			<img src="/images/listOfStuff.png" width="99%" alt="experiencePage">
 			
-			<p><a href="/projects">Onward to my projects</a></p>
+			<p><a href="/projects" style="text-align:center">Onward to my projects</a></p>
 			
 		</div><!-- /.wrap -->
 		<footer>
