--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@
 			<img src="/images/listOfStuff.png" width="99%" alt="experiencePage">
 			
 			<div style="text-align:center">    
-			  <a href="/projects">Onward to my projects</a>
+				<p><a href="/projects">Onward to my projects</a></p>
 			</div>
 			
 			
