--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,10 @@
 			Here's a  <a href="https://htmlpreview.github.io/?https://github.com/towoknee/knodawae/blob/master/pages/index.html" target="_blank">demo</a>
 			of the website, along with the <a href="https://github.com/towoknee/knodawae" target="_blank">repository</a>. 
 			</p>
+			
+			<div style="text-align:center">    
+				<p><a href="/misc">Up next</a></p>
+			</div>
 
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
