--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 			</p>
 			
 			<div style="text-align:center">    
-				<p><a href="/misc">Up next</a></p>
+				<p><a href="/misc">Oooh okay cool -></a></p>
 			</div>
 
     		</div><!-- /.blurb -->
