--- a/misc.html
+++ b/misc.html
@@ -16,8 +16,17 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Here's some misc stuff about me</h1>
-				<p>I really enjoy spending time with friends and family. balh blah</p>
+        		<h1>A bit more about me</h1>
+			
+			<h2>Education</h2>
+			<strong> University of California, Davis </strong> <br>
+			<i>Bachelor of Science in Computer Science</i> <br>
+			<i> Minor in Education </i> 
+			
+			<h2>Technical Skills</h2>
+			<strong> Programming Languages: </strong> <p> Java, C, R, C#, Lua, HTML, CSS </p>
+			<strong> Applications: </strong> <p> Github, Sublime, Adobe XD, Unity, Asana, Corona Labs </p>
+			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
