--- a/misc.html
+++ b/misc.html
@@ -18,10 +18,10 @@
     		<div class="blurb">
         		<h1>A bit more about me</h1>
 			
-			<h2>Education</h2>
-			<strong> University of California, Davis </strong> <br>
-			<i>Bachelor of Science in Computer Science</i> <br>
-			<i> Minor in Education </i> 
+			<p><b>Education</b></p>
+			<p> University of California, Davis </p> 
+			<p><i>Bachelor of Science in Computer Science</i></p> 
+			<p><i> Minor in Education </i> </p>
 			
 			<h2>Technical Skills</h2>
 			<strong> Programming Languages: </strong> <p> Java, C, R, C#, Lua, HTML, CSS </p>
