--- a/misc.html
+++ b/misc.html
@@ -18,10 +18,10 @@
     		<div class="blurb">
         		<h1>A bit more about me</h1>
 			
-			<p><b>Education</b></p>
-			<p> University of California, Davis </p> 
-			<p><i>Bachelor of Science in Computer Science</i></p> 
-			<p><i> Minor in Education </i> </p>
+			<p>
+				I currently attend the University of Calfornia, Davis. I am pursuing <b>computer science</b> as
+				my major as well as <b>education</b> as a minor. I currently have a 3.7 <b>GPA</b>. 
+			</p>
 			
 			<h2>Technical Skills</h2>
 			<strong> Programming Languages: </strong> <p> Java, C, R, C#, Lua, HTML, CSS </p>
