--- a/misc.html
+++ b/misc.html
@@ -18,14 +18,27 @@
     		<div class="blurb">
         		<h1>A bit more about me</h1>
 			
+			<h2>Education</h2>
 			<p>
 				I currently attend the University of Calfornia, Davis. I am pursuing <b>computer science</b> as
-				my major as well as <b>education</b> as a minor. I currently have a 3.7 <b>GPA</b>. 
+				my major as well as <b>education</b> as a minor. I currently have a 3.7 <b>GPA</b>. I plan to
+				graduate Spring 2020 and I am actively looking for open software engineering positions! 
 			</p>
 			
-			<h2>Technical Skills</h2>
-			<strong> Programming Languages: </strong> <p> Java, C, R, C#, Lua, HTML, CSS </p>
-			<strong> Applications: </strong> <p> Github, Sublime, Adobe XD, Unity, Asana, Corona Labs </p>
+			<h2>Technical Stuff</h2>
+			<p>
+				Some of the <b>programming languages</b> that I am comfortable with are Java, C, C#, HTML, CSS, and R.
+				Relevant <b>applications</b> that I've used are Github, Unity, Sublime, Asana, and Adobe XD. 
+			</p>
+			
+			<h2>Additional Information</h2>
+			<p>
+				During my free time, you can catch me spending time with friends and family. I enjoy reading,
+				creating/editting videos, napping, or surfing the web. And if you made it this far, thanks for
+				taking the time to view my site :) 
+			</p>
+			
+
 			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
