--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,9 @@
         		<h1>Here are some projects I've worked on!</h1>
 
 			<h2>RIP</h2>
+			<a href="https://www.youtube.com/watch?v=lx1-ISlhUis" target="_blank">
 			<p><img src="/images/ripSS.png" width="85%" alt="game"></p>
+			</a>
 			<p>
 			RIP, or Rage-Inducing Platformer, is a 2D platformer game created in Unity. 
 			The main objective of this game is to get from start to finish, under a time limit, with multiple obstacles standing in the way.
@@ -32,7 +34,9 @@
 			</p>
 			
 			<h2>KnoDaWae</h2>
+			<a href="https://htmlpreview.github.io/?https://github.com/towoknee/knodawae/blob/master/pages/index.html" target="_blank">
 			<p><img src="/images/kno.png" width="85%" alt="game2"></p>
+			</a>
 			<p>
 			KnoDaWae is an educational website that teaches novice programmers how to code in Python. 
 			This project was created at HackDavis, a hackathon held at my university, along with 3 others. 
