--- a/misc.html
+++ b/misc.html
@@ -20,7 +20,7 @@
 			
 			<h2><u>Education</u></h2>
 			<p>
-				I currently attend the University of Calfornia, Davis. I am pursuing <b>computer science</b> as
+				I currently attend the University of California, Davis. I am pursuing <b>computer science</b> as
 				my major as well as <b>education</b> as a minor. I currently have a 3.7 <b>GPA</b>. I plan to
 				graduate Spring 2020 and I am actively looking for open software engineering positions! 
 			</p>
