--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 		<title>Tony Doan, Projects</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="shortcut icon" type="image/png" href="images/fire.png">
 	</head>
 	<body>
 		<nav>
