--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Tony Doan, Homie</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
-		<!-- <link rel="shortcut icon" type="image/png" href="images/fire.png"> -->
+		<link rel="shortcut icon" type="image/png" href="images/fire.png">
 	</head>
 	<body>
 		<nav>
@@ -17,7 +17,7 @@
 		</nav>
 		<div class="mainBody">
 			<div class="topBody">
-				<img class="myImage" src="meAndUnicorn.png" alt="meme">
+				<img class="myImage" src="images/meAndUnicorn.png" alt="meme">
     			<div class="subHeading"> 
     				<h1>Hi there, I'm Tony Doan!</h1>
     				<p> I am currently a fourth-year student attending UC Davis. I'm studying computer science as well as education. Thanks for taking the time to learn more about me!</p>
