Changes to info

--- a/misc.html
+++ b/misc.html
@@ -28,21 +28,21 @@
 			
 			<h2><u>Technical Stuff</u></h2>
 			<p>
-				Some of the <b>programming languages</b> that I am comfortable with are Java, C, C#, HTML, CSS, and R.
+				Some of the <b>programming languages</b> that I am comfortable with are Java, C, C++, HTML, CSS, and Javascript.
 				Relevant <b>applications</b> that I've used are Github, Unity, Sublime, Asana, and Adobe XD. 
 			</p>
 			
 			<h2><u>Additional Information</u></h2>
 			<p>
-				During my free time, you can catch me spending time with friends and family. I enjoy reading,
-				creating/editting videos, napping, or surfing the web. And if you made it this far, thanks for
-				taking the time to view my site :) 
+				During my free time, you can catch me spending time with friends and family. I enjoy gaming, reading,
+				creating/editting videos, napping, and watching random Youtube videos. If you made it this far, thanks for
+				taking the time to view my site, it was pretty fun creating it :) 
 			</p>
 			
 
 			
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+    		</div>
+		</div> 
 		<footer>
     		<ul>
         		<li><a href="mailto:toedoan@gmail.com">email</a></li>
