--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<img class="myImage" src="images/meAndUnicorn.png" alt="meme">
     			<div class="subHeading"> 
     				<h1>Hi there, I'm Tony Doan!</h1>
-    				<p> I am currently a fourth-year student attending UC Davis. I'm studying computer science as well as education. Thanks for taking the time to learn more about me!</p>
+    				<p> I am currently a fourth-year student attending UC Davis. I'm studying computer science as well as education. I created this site using HTML, CSS, and Javascript. Thanks for taking the time to learn more about me!</p>
     			</div>
     		</div>
 
