job time -> grad time

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     		</div>
 
     		<div class="time">
-    			<p>Total Time Spent Job Hunting: </p>
-				<div id="countdown">I will update this if you hire me</div>
+    			<p>Time until Graduation: </p>
+				<div id="countdown">UC Davis 2020</div>
 			</div>
 
 			<p><a href="experience.html">Read more about me!</a></p>
