--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     		</div>
 
     		<div class="time">
-    			<p>Time until Graduation: </p>
+    			<p>Time since Graduation: </p>
 				<div id="countdown">UC Davis 2020</div>
 			</div>
 
