--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<div class="mainBody">
 			<div class="topBody">
 				<img class="myImage" src="images/meAndUnicorn.png" alt="meme">
+			</div>
     			<div class="subHeading"> 
     				<h1>Hi there, I'm Tony Doan!</h1>
     				<p> I am currently a fourth-year student attending UC Davis. I'm studying computer science as well as education. I am looking for opportunities in software engineering as well as web development as a new grad. I created this site using HTML, CSS, and Javascript. Thanks for taking the time to learn more about me!</p>
