--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,17 @@
     		<div class="blurb">
         		<h1>Here are some projects I've worked on!</h1>
 
+			<h2>Restaurant Tinder</h2>
+			<p><img src="/images/ripSS.png" width="85%" alt="game"></p>
+			<p>
+			When going out with friends, deciding on a place to eat is always difficult. With this
+			problem in mind, Restaurant Tinder came into existence. This web application allows friends to come together and 
+			vote for the best restaurant, tournament style. To play, the host sends the link of the game to his/her friends and 
+			then selects the location as well as the food type. Once everything is set, two restaurants appear on the screen every round,
+			and the one with the most votes proceeds to the next round until there is only one place left! This application was created by myself
+			along with 2 others using React, Express, the Yelp Fusion API, and SQLite. 
+			</p>
+			
 			<h2>RIP</h2>
 			<a href="https://www.youtube.com/watch?v=lx1-ISlhUis" target="_blank">
 			<p><img src="/images/ripSS.png" width="85%" alt="game"></p>
