--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         		<h1>Here are some projects I've worked on!</h1>
 
 			<h2>Restaurant Tinder</h2>
-			<p><img src="/images/restTindertemp.png" width="85%" alt="game"></p>
+			<p><img src="/images/restTinder.png" width="85%" alt="RestaurantTinderImage"></p>
 			<p>
 			When going out with friends, deciding on a place to eat is always difficult. With this
 			problem in mind, Restaurant Tinder came into existence. This web application allows friends to come together and 
