Update to personal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 			</div>
     			<div class="subHeading"> 
     				<h1>Hi there, I'm Tony Doan!</h1>
-    				<p> I am currently a fourth-year student attending UC Davis. I'm studying computer science as well as education. I am looking for opportunities in software engineering as well as web development as a new grad. I created this site using HTML, CSS, and Javascript. Thanks for taking the time to learn more about me!</p>
+    				<p> I've recently graduated from UC Davis with a Bachelor's in Computer Science as well as a minor in Education. 
+				    I am currently looking for awesome software engineering opportunities where I can apply what I've learned thus far
+				    and also be able to develop both professionally and personally while I'm there. I created this website 
+				    through HTML, CSS, and Javascript. I also used Github Pages to host this website. Thanks for visiting my page, feel free
+				    to look around!</p>
     			</div>
     		</div>
 
