--- a/misc.html
+++ b/misc.html
@@ -21,15 +21,16 @@
 			
 			<h2><u>Education</u></h2>
 			<p>
-				I currently attend the University of California, Davis. I am pursuing <b>computer science</b> as
-				my major as well as <b>education</b> as a minor. I currently have a 3.7 <b>GPA</b>. I plan to
-				graduate Spring 2020 and I am actively looking for open software engineering positions! 
+				University of California, Davis
+				Bachelors of Science, Computer Science 
+				Education Minor 
+				GPA: 3.7
 			</p>
 			
 			<h2><u>Technical Stuff</u></h2>
 			<p>
-				Some of the <b>programming languages</b> that I am comfortable with are Java, C, C++, HTML, CSS, and Javascript.
-				Relevant <b>applications</b> that I've used are Github, Unity, Sublime, Asana, and Adobe XD. 
+				Languages: Java, C, C++, HTML, CSS, and Javascript
+				Technical: AWS, SQLite, React, Github, Unity 
 			</p>
 			
 			<h2><u>Additional Information</u></h2>
