--- a/misc.html
+++ b/misc.html
@@ -21,16 +21,16 @@
 			
 			<h2><u>Education</u></h2>
 			<p>
-				University of California, Davis
-				Bachelors of Science, Computer Science 
-				Education Minor 
-				GPA: 3.7
+				University of California, Davis<br>
+				Bachelors of Science, Computer Science<br>
+				Education Minor<br>
+				GPA: 3.7<br>
 			</p>
 			
 			<h2><u>Technical Stuff</u></h2>
 			<p>
-				Languages: Java, C, C++, HTML, CSS, and Javascript
-				Technical: AWS, SQLite, React, Github, Unity 
+				Languages: Java, C, C++, HTML, CSS, and Javascript<br>
+				Technical: AWS, SQLite, React, Github, Unity<br> 
 			</p>
 			
 			<h2><u>Additional Information</u></h2>
